# claude.skills

./: .gitignore  GEMMA4_KV_CACHE_RESULTS.md  GEMMA4_WEIGHT_COMPRESSION.md  LICENSE  README.md  analysis_results.txt  analysis_special_layers_results.txt  analyze_special_layers.py  analyze_weights.py  download_qwen36.py
qwen25/: GPU_OPTIMIZATION.md  README.md  run-cpp.md  setup.md  text.md
qwen25/src/: CMakeLists.txt  build_and_run.sh  export_to_ir.sh  hf_to_openvino.py  modeling_qwen25.cpp  modeling_qwen25.hpp  run_qwen25.cpp
